# UPnPMPD

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  configure.ac  configure.in
data/: Makefile.am  Makefile.in
m4/: ac_lib_upnp.m4
src/: Makefile.am  Makefile.in  logging.h  main.c  mpdupnp.cbp  output_mpd.c  output_mpd.h  upnp.c  upnp.h  upnp_connmgr.c  upnp_connmgr.h  upnp_control.c  upnp_control.h  upnp_device.c  upnp_device.h  upnp_renderer.c  upnp_renderer.h  upnp_transport.c  upnp_transport.h  webserver.c  webserver.h  xmlescape.c  xmlescape.h
